# nmea

./: .gitignore  Cargo.toml  README.md
src/: binding.rs  lib.rs  nmea_frame.rs  nmea_message.rs
tests/: message_test.py
